--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ Flask-SQLAlchemy==2.3.2
 itsdangerous==1.1.0
 MarkupSafe==1.1.1
 mysqlclient==1.4.2.post1
-numpy==1.16.2
+numpy==1.23.5
 PyYAML==5.4
 scikit-learn==0.20.3
 scipy==1.2.1
-sklearn==0.0
 SQLAlchemy==1.3.1
-werkzeug>=0.15.3
+werkzeug==0.15.4
+gunicorn
