--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 Click==7.0
 docopt==0.6.2
-Flask==1.0.2
+Flask==2.2.5
 Flask-Boot==0.0.1
 Flask-MySQLdb==0.2.0
-Flask-SQLAlchemy==2.3.2
-itsdangerous==1.1.0
-MarkupSafe==1.1.1
-mysqlclient==1.4.2.post1
-numpy==1.23.5
-PyYAML==5.4
-scikit-learn==0.20.3
-scipy==1.2.1
-SQLAlchemy==1.3.1
-werkzeug==0.15.4
-gunicorn
+Flask-SQLAlchemy==2.5.1
+itsdangerous==2.1.2
+MarkupSafe==2.1.3
+mysqlclient==2.2.0
+numpy==1.24.4
+PyYAML==6.0.1
+scikit-learn==1.2.2
+scipy==1.10.1
+SQLAlchemy==1.4.49
+gunicorn==20.1.0
