--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Click==8.1.7
 docopt==0.6.2
 Flask==2.2.5
 Flask-Boot==0.0.1
+Flask-Caching==2.0.2
 Flask-MySQLdb==0.2.0
 Flask-SQLAlchemy==2.5.1
 itsdangerous==2.1.2
