--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,9 @@ scikit-learn==1.2.2
 scipy==1.10.1
 SQLAlchemy==1.4.49
 gunicorn==20.1.0
+flask
+gunicorn
+flask_caching
+pandas
+scikit-learn
+matplotlib
