--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,12 @@ itsdangerous==2.1.2
 MarkupSafe==2.1.3
 mysqlclient==2.2.0
 numpy==1.24.4
-PyYAML==6.0.1
+pandas==2.2.1
+python-dotenv==1.0.1
 scikit-learn==1.2.2
 scipy==1.10.1
 SQLAlchemy==1.4.49
 gunicorn==20.1.0
-flask
-gunicorn
-flask_caching
-pandas
-scikit-learn
-matplotlib
-plotly
-python-dotenv
-seaborn
+matplotlib==3.7.1
+plotly==5.18.0
+seaborn==0.12.2
