--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,13 @@ itsdangerous==2.1.2
 MarkupSafe==2.1.3
 mysqlclient==2.2.0
 numpy==1.23.5
-pandas==2.2.1
-python-dotenv==1.0.1
+PyYAML==6.0.1
 scikit-learn==1.2.2
 scipy==1.10.1
 SQLAlchemy==1.4.49
 gunicorn==20.1.0
-matplotlib==3.7.1
-plotly==5.18.0
-seaborn==0.12.2
+pandas
+matplotlib
+plotly
+python-dotenv
+seaborn
